completly fixed time sync errors